--- a/gbcpu.cabal
+++ b/gbcpu.cabal
@@ -51,13 +51,13 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules:     GB.Util.Symbolic, GB.CPU.Decoder, GB.CPU.Encoder, GB.Util.Base, GB.CPU.Alu, GB.CPU, GB.Util.Clean, GB.Lava.VhdlNew
+  exposed-modules:     GB.Util.Symbolic, GB.CPU.Decoder, GB.CPU.Encoder, GB.Util.Base, GB.CPU.Alu, GB.CPU, GB.Util.Clean, GB.Lava.VhdlNew, GB.Util.CombSimp
 
   -- Modules included in this library but not exported.
   -- other-modules:
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:  DeriveFunctor, ImplicitParams, FlexibleInstances, OverloadedStrings, TupleSections, DeriveGeneric, DeriveAnyClass, TypeFamilies, PatternSynonyms
+  other-extensions:  DeriveFunctor, ImplicitParams, FlexibleInstances, OverloadedStrings, TupleSections, DeriveGeneric, DeriveAnyClass, TypeFamilies, PatternSynonyms, FlexibleContexts
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.11, mtl >=2.2, chalmers-lava2000 >=1.6, array >=0.5, yaml >=0.11, text >=1.2, aeson >=1.4, deepseq >=1.4, temporary >=1.3
