--- a/gbcpu.cabal
+++ b/gbcpu.cabal
@@ -13,7 +13,7 @@ name:                gbcpu
 version:             0.1.0.0
 
 -- A short (one-line) description of the package.
-synopsis:            A Game Boy simulator in Chalmers Lava
+synopsis:            Sharp LR35902 emulator
 
 -- A longer description of the package.
 -- description:
@@ -51,16 +51,16 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules:     GB.Util.Symbolic, GB.CPU.Decoder, GB.CPU.Encoder, GB.Util.Base, GB.CPU.Alu, GB.CPU, GB.Util.Clean, GB.Lava.VhdlNew, GB.Util.CombSimp
+  exposed-modules:     GB.CPU, GB.Lava.Netlist, GB.Lava.Signal, GB.Util.Symbolic, GB.Util.Clean, GB.Util.Base, GB.Util.NetList, GB.Util.CombSimp, GB.CPU.Decoder, GB.CPU.Encoder, GB.CPU.Test, GB.CPU.Alu
 
   -- Modules included in this library but not exported.
   -- other-modules:
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:  DeriveFunctor, ImplicitParams, FlexibleInstances, OverloadedStrings, TupleSections, DeriveGeneric, DeriveAnyClass, TypeFamilies, PatternSynonyms, FlexibleContexts
+  other-extensions:    TypeFamilies, TupleSlices, DeriveFunctor, DeriveGeneric, DeriveAnyClass, TupleSections, PatternSynonyms, FlexibleContexts, FlexibleInstances, ImplicitParams, OverloadedStrings
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.11, mtl >=2.2, chalmers-lava2000 >=1.6, array >=0.5, yaml >=0.11, text >=1.2, aeson >=1.4, deepseq >=1.4, temporary >=1.3
+  build-depends:       base >=4.11 && <4.12, data-reify >=0.6 && <0.7, mtl >=2.2 && <2.3, chalmers-lava2000 >=1.6 && <1.7, deepseq >=1.4 && <1.5, temporary >=1.3 && <1.4, containers >=0.5 && <0.6, array >=0.5 && <0.6, yaml >=0.11 && <0.12, text >=1.2 && <1.3, aeson >=1.4 && <1.5
 
   -- Directories containing source files.
   -- hs-source-dirs:
@@ -69,19 +69,18 @@ library
   default-language:    Haskell2010
 
 
-executable CPU_Test
+executable cpu_test
   -- .hs or .lhs file containing the Main module.
   main-is:             GB/CPU/Test.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules: GB.CPU.Alu, GB.CPU.Decoder, GB.CPU.Encoder, GB.Util.Base,
-                 GB.Util.Symbolic
+  -- other-modules:
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:    DeriveFunctor, ImplicitParams, FlexibleInstances, OverloadedStrings, TupleSections
+  other-extensions:    TypeFamilies, TupleSlices, DeriveFunctor, DeriveGeneric, DeriveAnyClass, TupleSections, PatternSynonyms, FlexibleContexts, FlexibleInstances, ImplicitParams, OverloadedStrings
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.11, mtl >=2.2, chalmers-lava2000 >=1.6, array >=0.5, yaml >=0.11, text >=1.2, aeson >=1.4, deepseq >=1.4
+  build-depends:       base >=4.11 && <4.12, data-reify >=0.6 && <0.7, mtl >=2.2 && <2.3, chalmers-lava2000 >=1.6 && <1.7, deepseq >=1.4 && <1.5, temporary >=1.3 && <1.4, containers >=0.5 && <0.6, array >=0.5 && <0.6, yaml >=0.11 && <0.12, text >=1.2 && <1.3, aeson >=1.4 && <1.5
 
   -- Directories containing source files.
   -- hs-source-dirs:
