--- a/gbcpu.cabal
+++ b/gbcpu.cabal
@@ -57,11 +57,10 @@ library
   -- other-modules:
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:    TypeFamilies, TupleSlices, DeriveFunctor, DeriveGeneric, DeriveAnyClass, TupleSections, PatternSynonyms, FlexibleContexts, FlexibleInstances, ImplicitParams, OverloadedStrings
+  other-extensions: DeriveAnyClass, DeriveFunctor, DeriveGeneric, FlexibleContexts, FlexibleInstances, ImplicitParams, LambdaCase, PatternSynonyms, TupleSections, TypeFamilies
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.11 && <4.12, data-reify >=0.6 && <0.7, mtl >=2.2 && <2.3, chalmers-lava2000 >=1.6 && <1.7, deepseq >=1.4 && <1.5, temporary >=1.3 && <1.4, containers >=0.5 && <0.6, array >=0.5 && <0.6, yaml >=0.11 && <0.12, text >=1.2 && <1.3, aeson >=1.4 && <1.5
-
+  build-depends: yaml >=0.11, text >=1.2, aeson >=1.4, base >=4.11 && <4.12, array >=0.5, deepseq >= 1.4, mtl >=2.2, data-reify >=0.6, transformers >=0.5, containers >=0.5
   -- Directories containing source files.
   -- hs-source-dirs:
 
@@ -74,13 +73,13 @@ executable cpu_test
   main-is:             GB/CPU/Test.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  other-modules: GB.CPU.Encoder, GB.CPU.Decoder, GB.Util.Symbolic, GB.Util.Base, GB.CPU.Alu, GB.Lava.Signal
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:    TypeFamilies, TupleSlices, DeriveFunctor, DeriveGeneric, DeriveAnyClass, TupleSections, PatternSynonyms, FlexibleContexts, FlexibleInstances, ImplicitParams, OverloadedStrings
+  other-extensions: DeriveFunctor, FlexibleInstances, ImplicitParams, OverloadedStrings, TupleSections, LambdaCase
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.11 && <4.12, data-reify >=0.6 && <0.7, mtl >=2.2 && <2.3, chalmers-lava2000 >=1.6 && <1.7, deepseq >=1.4 && <1.5, temporary >=1.3 && <1.4, containers >=0.5 && <0.6, array >=0.5 && <0.6, yaml >=0.11 && <0.12, text >=1.2 && <1.3, aeson >=1.4 && <1.5
+  build-depends: yaml >=0.11, text >=1.2, aeson >=1.4, base >=4.11, array >=0.5, deepseq >= 1.4, mtl >=2.2, data-reify >=0.6
 
   -- Directories containing source files.
   -- hs-source-dirs:
