--- a/gbcpu.cabal
+++ b/gbcpu.cabal
@@ -51,7 +51,7 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules: GB.CPU.Core, GB.Lava.Netlist, GB.Lava.Signal, GB.Util.Symbolic, GB.Util.Clean, GB.Util.Base, GB.Util.NetList, GB.Util.CombSimp, GB.CPU.Core.Decoder, GB.CPU.Core.Encoder, GB.CPU.Core.Alu, GB.CPU.Memory.HMem, GB.Util.Simulate, GB.CPU.Memory.IO, GB.Misc.Simulator, GB.Misc.Cartridge, GB.CPU.CoreShim
+  exposed-modules: GB.CPU.Core, GB.Lava.Netlist, GB.Lava.Signal, GB.Util.Symbolic, GB.Util.Clean, GB.Util.Base, GB.Util.NetList, GB.Util.CombSimp, GB.CPU.Core.Decoder, GB.CPU.Core.Encoder, GB.CPU.Core.Alu, GB.CPU.Memory.HMem, GB.Util.Simulate, GB.CPU.Memory.IO, GB.Misc.Simulator, GB.Misc.Cartridge, GB.CPU.CoreShim, GB.GameBoy
 
   -- Modules included in this library but not exported.
   -- other-modules:
