--- a/gbcpu.cabal
+++ b/gbcpu.cabal
@@ -51,13 +51,13 @@ cabal-version:       >=1.10
 
 library
   -- Modules exported by the library.
-  exposed-modules: GB.CPU.Core, GB.Lava.Netlist, GB.Lava.Signal, GB.Util.Symbolic, GB.Util.Clean, GB.Util.Base, GB.Util.NetList, GB.Util.CombSimp, GB.CPU.Core.Decoder, GB.CPU.Core.Encoder, GB.CPU.Core.Alu, GB.CPU.Memory.HMem, GB.Util.Simulate, GB.CPU.Memory.IO, GB.Misc.Simulator, GB.Misc.Cartridge, GB.CPU.CoreShim, GB.GameBoy
+  exposed-modules: GB.CPU.Core, GB.Lava.Netlist, GB.Lava.Signal, GB.Util.Symbolic, GB.Util.Clean, GB.Util.Base, GB.Util.NetList, GB.Util.CombSimp, GB.CPU.Core.Decoder, GB.CPU.Core.Encoder, GB.CPU.Core.Alu, GB.CPU.Memory.HMem, GB.Util.Simulate, GB.CPU.Memory.IO, GB.Misc.Simulator, GB.Misc.Cartridge, GB.CPU.CoreShim, GB.GameBoy, GB.ROM.RomMake, GB.ROM.RomToSignal
 
   -- Modules included in this library but not exported.
   -- other-modules:
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions: DeriveAnyClass, DeriveFunctor, DeriveGeneric, FlexibleContexts, FlexibleInstances, ImplicitParams, LambdaCase, PatternSynonyms, TupleSections, TypeFamilies, ScopedTypeVariables, ExplicitForAll, NamedFieldPuns, RecordWildCards
+  other-extensions: DeriveAnyClass, DeriveFunctor, DeriveGeneric, FlexibleContexts, FlexibleInstances, ImplicitParams, LambdaCase, PatternSynonyms, TupleSections, TypeFamilies, ScopedTypeVariables, ExplicitForAll, NamedFieldPuns, RecordWildCards, RankNTypes, RecursiveDo
 
   -- Other library packages from which modules are imported.
   build-depends: yaml >=0.11, text >=1.2, aeson >=1.4, base >=4.11 && <4.12, array >=0.5, deepseq >= 1.4, mtl >=2.2, data-reify >=0.6, transformers >=0.5, containers >=0.5, bytestring >=0.10
