--- a/tests.yaml
+++ b/tests.yaml
@@ -79,7 +79,7 @@
   set8: [1,0,1,1]
   aluR: [1,0,0,1]
   aluL: [0,1]
-  aluC: &add [1,1,1,0,1,0,0]
+  aluC: [1,1,1,0,1,0,1]
   set16: *NVC
   nextState: &jr1 [0,0,1,0,0,1,1]
 - test: JR2
@@ -104,7 +104,7 @@
   set8: [1,0,1,1]
   aluR: [1,0,0,1]
   aluL: [0,1]
-  aluC: *add
+  aluC: &add [1,1,1,0,1,0,0]
   set16: [0,x,0,x,x,x,'!z',0]
   i16: *IIP
   nextState: [0,0,z,0,0,z,z]
